[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Net.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Level/CanvasLayer.gd" type="Script" id=7]
[ext_resource path="res://Menu Screens/Fade-in.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1460, 165 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1100, 165 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 6 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 300 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1.3208, 368.109 )
current = true
zoom = Vector2( 2.2, 2.2 )
smoothing_enabled = true

[node name="Walls" type="Node2D" parent="."]
z_index = -1

[node name="InBounds" type="StaticBody2D" parent="Walls" groups=[
"in_bounds",
]]
position = Vector2( 0, 1000 )
z_index = 1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/InBounds"]
shape = SubResource( 1 )

[node name="FloorColor" type="ColorRect" parent="Walls/InBounds/CollisionShape2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1458.0
margin_top = -164.0
margin_right = 1458.0
margin_bottom = 197.0
color = Color( 0.376471, 0.823529, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutBounds" type="StaticBody2D" parent="Walls" groups=[
"out_bounds",
]]
position = Vector2( 0, 1000 )
collision_layer = 2

[node name="Left" type="CollisionShape2D" parent="Walls/OutBounds"]
position = Vector2( -2200, 0 )
shape = SubResource( 2 )

[node name="FloorColor" type="ColorRect" parent="Walls/OutBounds/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1096.0
margin_top = -164.0
margin_right = 1102.0
margin_bottom = 197.0
color = Color( 0.482353, 0.321569, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="CollisionShape2D" parent="Walls/OutBounds"]
position = Vector2( 2200, 0 )
shape = SubResource( 2 )

[node name="FloorColor" type="ColorRect" parent="Walls/OutBounds/Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1105.0
margin_top = -164.0
margin_right = 1102.0
margin_bottom = 197.0
color = Color( 0.482353, 0.321569, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Net" parent="Walls" instance=ExtResource( 3 )]
position = Vector2( 0.0578003, 834.948 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="UI/Control/HBoxContainer"]
margin_right = 36.0
margin_bottom = 76.0
size_flags_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="AgentScore" type="Label" parent="UI/Control/HBoxContainer"]
margin_left = 988.0
margin_right = 1024.0
margin_bottom = 76.0
size_flags_horizontal = 10
size_flags_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="FadeIn" parent="UI" instance=ExtResource( 8 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Players" type="Node" parent="."]

[node name="Player" parent="Players" instance=ExtResource( 1 )]
position = Vector2( -900, 700 )

[connection signal="finished" from="UI/FadeIn" to="." method="_on_FadeIn_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
